--- a/03-frontend/angular-ecommerce/package.json
+++ b/03-frontend/angular-ecommerce/package.json
@@ -11,15 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.0",
-    "@angular/common": "~11.1.0",
-    "@angular/compiler": "~11.1.0",
+    "@angular/animations": "~11.1.1",
+    "@angular/common": "~11.1.1",
+    "@angular/compiler": "~11.1.1",
     "@angular/core": "~11.1.0",
     "@angular/forms": "~11.1.0",
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -28,7 +29,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.1",
     "@angular/cli": "~11.1.1",
-    "@angular/compiler-cli": "~11.1.0",
+    "@angular/compiler-cli": "~11.1.1",
+    "@angular/localize": "^11.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
